SigmaCodebackup3rdSep/objects/Stripe_API__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Api_Key__c</fullName>
        <label>Api Key</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_URL__c</fullName>
        <label>Charge URL</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_URL__c</fullName>
        <label>Customer URL</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_URL__c</fullName>
        <label>Refund URL</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_URL__c</fullName>
        <label>Token URL</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <label>StripeAPI</label>
</CustomObject>